[package]
authors.workspace = true
build = "build.rs"
description = "Runtime of the Kusama Network"
edition.workspace = true
license.workspace = true
name = "staging-kusama-runtime"
repository.workspace = true
version.workspace = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
binary-merkle-tree = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-genesis-builder = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
kusama-runtime-constants = { package = "kusama-runtime-constants", path = "constants", default-features = false }
sp-api = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-storage = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-application-crypto = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-arithmetic = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-io = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-mmr-primitives = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-runtime = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-staking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-core = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-session = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-version = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-npos-elections = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }

pallet-asset-rate = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis"}
pallet-authority-discovery = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-authorship = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-babe = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-bags-list = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-balances = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-beefy = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-beefy-mmr = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-bounties = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-child-bounties = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-transaction-payment = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-nomination-pools-runtime-api = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-collective = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-conviction-voting = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-democracy = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-elections-phragmen = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-election-provider-multi-phase = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-fast-unstake = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
frame-executive = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-grandpa = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-nis = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-identity = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-im-online = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-indices = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false  }
pallet-membership = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-message-queue = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-mmr = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-multisig = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-nomination-pools = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-offences = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-preimage = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-proxy = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-ranked-collective = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-recovery = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-referenda = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-scheduler = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-session = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-society = { default-features = false, git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
frame-support = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-staking = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-state-trie-migration = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-staking-runtime-api = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
frame-system = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
frame-system-rpc-runtime-api = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-timestamp = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-tips = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-treasury = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-utility = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-vesting = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-whitelist = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
pallet-xcm = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis"}
pallet-xcm-benchmarks = { default-features = false, optional = true , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis"}
frame-election-provider-support = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }

frame-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
frame-try-runtime = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
pallet-offences-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
pallet-session-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
pallet-nomination-pools-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
pallet-election-provider-support-benchmarking = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false, optional = true }
hex-literal = "0.4.1"

runtime-common = { package = "polkadot-runtime-common", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }
runtime-parachains = { package = "polkadot-runtime-parachains", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }
primitives = { package = "polkadot-primitives", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }

xcm = { package = "xcm", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }
xcm-executor = { package = "xcm-executor", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }
xcm-builder = { package = "xcm-builder", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", version = "28.0.0" }
sp-trie = { version = "26.0.0" }
separator = "0.4.1"
serde_json = "1.0.96"
remote-externalities = { package = "frame-remote-externalities" , version = "0.32.0" }
tokio = { version = "1.24.2", features = ["macros"] }
sp-tracing = { default-features = false , version = "14.0.0" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }

[features]
default = [ "std" ]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"babe-primitives/std",
	"beefy-primitives/std",
	"binary-merkle-tree/std",
	"bitvec/std",
	"block-builder-api/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"inherents/std",
	"kusama-runtime-constants/std",
	"log/std",
	"offchain-primitives/std",
	"pallet-asset-rate/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-collective/std",
	"pallet-conviction-voting/std",
	"pallet-democracy/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-elections-phragmen/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-nis/std",
	"pallet-nomination-pools-benchmarking?/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools/std",
	"pallet-offences-benchmarking?/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-ranked-collective/std",
	"pallet-recovery/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-session-benchmarking?/std",
	"pallet-session/std",
	"pallet-society/std",
	"pallet-staking-runtime-api/std",
	"pallet-staking/std",
	"pallet-state-trie-migration/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	"pallet-xcm-benchmarks?/std",
	"pallet-xcm/std",
	"parity-scale-codec/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde/std",
	"serde_derive",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-io/std",
	"sp-mmr-primitives/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-tracing/std",
	"sp-version/std",
	"tx-pool-api/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nis/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-xcm-benchmarks/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nis/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-society/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-xcm/try-runtime",
	"runtime-common/try-runtime",
	"runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [ "sp-api/disable-logging" ]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = [ "runtime-parachains/runtime-metrics", "sp-io/with-tracing" ]
