[package]
name = "kusama-runtime-constants"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
primitives = { package = "polkadot-primitives", default-features = false , git = "https://github.com/paritytech/polkadot.git", branch = "master" }
runtime-common = { package = "polkadot-runtime-common", default-features = false , git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis" }
sp-runtime = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-weights = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }
sp-core = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }

xcm = { git = "https://github.com/agryaznov/polkadot-sdk.git", branch = "ag/indices-genesis", default-features = false }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm/std"
]
